// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 1`] = `
.emotion-0 {
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-top: 100px;
}

@media (max-width: 900px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-0.emotion-0 h5#heading5 {
    margin-bottom: 100px;
  }
}

@media (max-width: 600px) {
  .emotion-1.emotion-1 {
    display: none;
  }
}

.emotion-1 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-2 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-4 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-5 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-9 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-9 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-11 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-11 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <h5
          class="emotion-2 emotion-3"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-4"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-5 emotion-6"
                color="#f3f3f3"
                id="heading6"
              >
                2019
              </h6>
              <h6
                class="emotion-5 emotion-6"
                color="#f3f3f3"
                id="heading6"
              >
                2020
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-9 emotion-6"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-11 emotion-12"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 2`] = `
.emotion-0 {
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-top: 100px;
}

@media (max-width: 900px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-0.emotion-0 h5#heading5 {
    margin-bottom: 100px;
  }
}

@media (max-width: 600px) {
  .emotion-1.emotion-1 {
    display: none;
  }
}

.emotion-1 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-2 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-4 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-5 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-9 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-9 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-11 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-11 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <h5
          class="emotion-2 emotion-3"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-4"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-5 emotion-6"
                color="#f3f3f3"
                id="heading6"
              >
                2019
              </h6>
              <h6
                class="emotion-5 emotion-6"
                color="#f3f3f3"
                id="heading6"
              >
                heute
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-9 emotion-6"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-11 emotion-12"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 3`] = `
.emotion-0 {
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-top: 100px;
}

@media (max-width: 900px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-0.emotion-0 h5#heading5 {
    margin-bottom: 100px;
  }
}

@media (max-width: 600px) {
  .emotion-1.emotion-1 {
    display: none;
  }
}

.emotion-1 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-2 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-4 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-5 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-7 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-7 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-9 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-9 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <h5
          class="emotion-2 emotion-3"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-4"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-5 emotion-6"
                color="#f3f3f3"
                id="heading6"
              >
                2020
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-7 emotion-6"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-9 emotion-10"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
